# mango

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
cmake/: Packaging.cmake
docs/: manifest.md  resolution.md
include/mango/: Json.hpp  Manifest.hpp  SemVer.hpp
src/: Json.cpp  Manifest.cpp  SemVer.cpp  main.cpp
tests/: test_main.cpp
